# imager

./: .gitignore  CMakeLists.txt  README.md  icons_dark.qrc  icons_light.qrc  imager.pro
GuiLayouts/: Clarification.txt  MainForm.ui
colorList/: A-F.txt  G-M.txt  N-Z.txt
include/: colors.h  image.h  mainwindow.h  mainwindow.ui
src/: .code.cpp.kate-swp  .image.cpp.kate-swp  code.cpp  colors.cpp  deprecated.cpp  image.cpp  mainwindow.cpp
